application/frontend/manifestes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: 21daystodoui
  namespace: frontend-ns

spec:
  replicas: 2
  selector:
    matchExpressions:
      - key:  app
        operator: In
        values: 
          - frontend
  strategy:
    rollingUpdate:
       maxSurge:  25%
       maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: microtodouipod
      namespace: testns
      labels:
        app : frontend
    
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: todouicontainer
          image: ghcr.io/abhishekg2244/frontend:latest
          ports:
            - containerPort: 80
