application/frontend/manifestes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microtodoui-service
  namespace: frontend-ns
spec:
  type: ClusterIP
  selector:
     app : frontend
  ports:
    - port: 80
      targetPort: 80
